<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="url"
            app:title="@string/url_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="db"
            app:title="@string/db_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Rango de Busqueda - Acomodo">

        <EditTextPreference
            app:key="location_start"
            app:title="Fecha Inicio"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="location_end"
            app:title="Fecha Final"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Settings del Scanner">

        <EditTextPreference
            app:key="scanner_key"
            app:title="Clave"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


</PreferenceScreen>