<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".InvoiceActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/invoice_lv_top_dbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoice_lbl">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <TextView
                android:id="@+id/object_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:fontFamily="@font/lato_bold"
                android:text="@string/product_lv_lbl"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/import_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:fontFamily="@font/lato_bold"
                android:text="@string/import_lv_lbl"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/product_lv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/invoice_lv_dbl"
        android:dividerHeight="0.0dp"
        app:layout_constraintBottom_toTopOf="@+id/lines_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

    </ListView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#2f3983"
        android:fontFamily="@font/lato_regular"
        android:padding="20dp"
        android:text="@string/confirm_btn_str"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/lato_bold"
        android:text="TOTAL:"
        android:textColor="#8e8e8e"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/total_txt"
        app:layout_constraintTop_toTopOf="@+id/lines_lbl" />

    <TextView
        android:id="@+id/total_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/lato_regular"
        android:text="$40"
        android:textColor="#8e8e8e"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total_lbl" />

    <TextView
        android:id="@+id/supplier_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato_regular"
        android:text="Proovedor"
        android:textColor="#8e8e8e"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_txt" />

    <TextView
        android:id="@+id/invoice_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="Folio"
        android:textColor="#2f3983"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_lbl" />

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/lato_regular"
        android:text="Av. Obreros de Cananea #2360, El Grillo, Zapopan"
        android:textColor="#8e8e8e"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_img" />

    <TextView
        android:id="@+id/supplier_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/lato_regular"
        android:textColor="#8e8e8e"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/supplier_lbl"
        app:layout_constraintTop_toBottomOf="@+id/address_txt" />

    <TextView
        android:id="@+id/invoice_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:textColor="#2f3983"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/invoice_lbl"
        app:layout_constraintTop_toBottomOf="@+id/supplier_lbl" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/company_name" />

    <ProgressBar
        android:id="@+id/progressBar_invoice"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lines_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="LINEAS:"
        app:layout_constraintBottom_toTopOf="@+id/pzs_lbl"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pzs_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="PIEZAS:"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lines_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:text="100"
        app:layout_constraintStart_toEndOf="@+id/lines_lbl"
        app:layout_constraintTop_toTopOf="@+id/lines_lbl" />

    <TextView
        android:id="@+id/pzs_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="1000"
        app:layout_constraintStart_toEndOf="@+id/pzs_lbl"
        app:layout_constraintTop_toTopOf="@+id/pzs_lbl" />

</androidx.constraintlayout.widget.ConstraintLayout>